--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "test:e2e:headed": "bash scripts/e2e.sh pnpm playwright test --headed",
     "playwright": "node --conditions=react-server node_modules/@playwright/test/cli.js",
     "typecheck": "pnpm run with-dev-env pnpm run build && pnpm run-on-packages typecheck && pnpm run with-dev-env tsc --noEmit && pnpm run db:check",
-    "services:start": "pnpm with-dev-env pnpm supabase start && (docker ps | grep helperai-nginx || pnpm nginx:start)",
-    "services:stop": "pnpm supabase stop && docker stop helperai-nginx || true",
-    "nginx:start": "docker run -d --rm --name helperai-nginx -p 80:80 -p 443:443 --add-host host.docker.internal:host-gateway --network supabase_network_helper -v \"$(pwd)/scripts/docker/local-nginx/helperai_dev.conf:/etc/nginx/conf.d/default.conf\" -v \"$(pwd)/scripts/docker/local-nginx/certs:/etc/ssl/certs\" nginx:1.27.5",
+    "services:start": "pnpm with-dev-env pnpm supabase start && pnpm nginx:start-unless-running",
+    "services:stop": "pnpm supabase stop && pnpm nginx:stop || true",
+    "nginx:start-unless-running": "docker ps --filter \"label=com.antiwork.helper.proxy\" -q | grep -q . || pnpm nginx:start",
+    "nginx:start": "docker run -d --rm --name helperai-nginx -p 80:80 -p 443:443 --add-host host.docker.internal:host-gateway --network supabase_network_helper -v \"$(pwd)/scripts/docker/local-nginx/helperai_dev.conf:/etc/nginx/conf.d/default.conf\" -v \"$(pwd)/scripts/docker/local-nginx/certs:/etc/ssl/certs\" --label com.antiwork.helper.proxy nginx:1.27.5",
+    "nginx:stop": "docker stop helperai-nginx",
     "ensure-ssl-certificates": "bash scripts/ensure-ssl-certificates.sh",
     "generate-ssl-certificates": "bash scripts/generate-ssl-certificates.sh",
     "run-on-packages": "pnpm run --filter=!helperai --if-present --workspace-concurrency=1",
