--- a/package.json
+++ b/package.json
@@ -57,11 +57,15 @@
     "@ai-sdk/fireworks": "^0.1.10",
     "@ai-sdk/openai": "^1.3.24",
     "@ai-sdk/react": "^1.2.10",
+    "@helperai/client": "workspace:*",
     "@helperai/react": "workspace:*",
     "@helperai/sdk": "workspace:*",
     "@hookform/resolvers": "3.3.4",
     "@lifeomic/attempt": "^3.1.0",
     "@mendable/firecrawl-js": "^1.16.0",
+    "@opentelemetry/api-logs": "^0.203.0",
+    "@opentelemetry/instrumentation": "^0.203.0",
+    "@opentelemetry/sdk-logs": "^0.203.0",
     "@radix-ui/react-accordion": "^1.2.7",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.2.2",
@@ -120,6 +124,7 @@
     "googleapis": "^140.0.0",
     "gpt-tokenizer": "^2.5.0",
     "html-to-text": "^9.0.5",
+    "import-in-the-middle": "^1.14.2",
     "input-otp": "^1.4.2",
     "isomorphic-dompurify": "^2.24.0",
     "jsdom": "^26.1.0",
@@ -156,8 +161,10 @@
     "rehype-sanitize": "^6.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "require-in-the-middle": "^7.5.2",
     "resend": "^4.5.1",
     "rrweb-player": "^1.0.0-alpha.4",
+    "scroll-into-view-if-needed": "^3.1.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.5",
     "sonner": "^2.0.5",
@@ -167,6 +174,7 @@
     "tw-animate-css": "^1.2.5",
     "ua-parser-js": "^1.0.37",
     "undici": "^7.9.0",
+    "unified": "^11.0.5",
     "use-stick-to-bottom": "^1.0.40",
     "zod": "^3.24.3",
     "zustand": "^5.0.0"
@@ -180,7 +188,9 @@
     "@playwright/test": "^1.48.1",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query-devtools": "^5.59.16",
-    "@testcontainers/postgresql": "^10.13.1",
+    "@testcontainers/postgresql": "^11.5.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/canvas-confetti": "^1.9.0",
     "@types/dom-speech-recognition": "^0.0.6",
     "@types/file-saver": "^2.0.7",
@@ -196,6 +206,7 @@
     "@types/react-dom": "19.1.2",
     "@types/ua-parser-js": "^0.7.39",
     "@vercel/sdk": "^1.8.2",
+    "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^2.1.1",
     "autoevals": "^0.0.117",
     "classnames": "^2.5.1",
@@ -212,10 +223,12 @@
     "evalite": "^0.8.2",
     "heroku": "^10.6.1",
     "openapi-types": "^12.1.3",
+    "picocolors": "^1.1.1",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react-email": "^3.0.4",
     "supabase": "^2.22.12",
+    "testcontainers": "^11.5.1",
     "tsx": "^4.19.4",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.31.0",
