--- a/packages/marketing/package.json
+++ b/packages/marketing/package.json
@@ -28,6 +28,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^2.12.2",
+    "resend": "^4.5.1",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
