Enable CI to run automatically on contributor pull requests (#1019)
Fixes #991 
<img width="2940" height="1510" alt="image"
src="https://github.com/user-attachments/assets/a64f9ac8-275f-41fc-ae8b-d1241053bbc8"
/>


### AI Usage

- No AI was used; all implementation was done by myself.

- No before/after video or e2e test needed; reference PR available on my
fork for review:
https://github.com/Anshgrover23/helper/pull/1

---------

Signed-off-by: Ansh Grover <168731971+Anshgrover23@users.noreply.github.com>
Co-authored-by: Sahil Lavingia <sahil.lavingia@gmail.com>
Co-authored-by: Jono Mingard <reason.koan@gmail.com>

--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -11,7 +11,7 @@ concurrency:
 
 jobs:
   autofix:
-    runs-on: ubicloud-standard-4
+    runs-on: ${{ github.repository == 'antiwork/helper' && 'ubicloud-standard-4' || 'ubuntu-latest' }}
 
     steps:
       - uses: actions/checkout@v4
@@ -39,10 +39,6 @@ jobs:
 
       - name: Typecheck
         shell: bash
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-          VERCEL_ORG_ID: ${{ vars.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ vars.VERCEL_PROJECT_ID }}
         run: |
           export NODE_OPTIONS="--max_old_space_size=4096"
           cp .env.local.sample .env.local
