--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,6 +2,9 @@ name: Playwright E2E Tests
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
 
 permissions:
   contents: read
@@ -12,7 +15,7 @@ concurrency:
 
 jobs:
   e2e:
-    runs-on: ubicloud-standard-2
+    runs-on: ${{ github.repository == 'antiwork/helper' && 'ubicloud-standard-2' || 'ubuntu-latest' }}
     timeout-minutes: 60
     env:
       CI: true
