chore: use sharding to run E2E tests on CI (#1030)
Ref:- https://github.com/antiwork/helper/issues/992


### AI Disclosure:-
I have used Claude Code to plan this task

---------

Signed-off-by: Jono M <reason.koan@gmail.com>
Co-authored-by: Jono Mingard <reason.koan@gmail.com>

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -17,6 +17,10 @@ jobs:
   e2e:
     runs-on: ${{ github.repository == 'antiwork/helper' && 'ubicloud-standard-2' || 'ubuntu-latest' }}
     timeout-minutes: 60
+    strategy:
+      fail-fast: false
+      matrix:
+        shardIndex: [1, 2, 3, 4]
     env:
       CI: true
       OPENAI_API_KEY: test-openai-api-key
@@ -55,18 +59,13 @@ jobs:
       - name: Setup E2E test environment
         run: ./scripts/setup-e2e-tests.sh
 
-      - name: Run fail-fast on changed Playwright tests
-        if: github.event_name == 'pull_request'
-        run: ./scripts/e2e.sh playwright test --only-changed=origin/${{ github.base_ref }}
-
       - name: Run full Playwright suite
-        if: github.event_name == 'push'
-        run: ./scripts/e2e.sh
+        run: ./scripts/e2e.sh playwright test --shard=${{ matrix.shardIndex }}/4
 
       - name: Upload Playwright HTML report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-report
+          name: playwright-report-shard-${{ matrix.shardIndex }}-of-4
           path: playwright-report/
           retention-days: 30
