ci: enable parallel runs for playwright e2e job (#1038)
## Ref #992 

1. Enabled parallel runs for CI environment 
2. Fixed some flaky tests which were hampering parallel runs

### Perf Imrprovements
E2E specs takes 2.3m ~ 4m now with 4 workers

### Test Passing

<img width="728" height="812" alt=""
src="https://github.com/user-attachments/assets/ef9ce158-85a2-4d23-b708-b60873ad6f4c"
/>

### AI Usage:
1. Claude for dedupe and re-factoring edits

### Checklist
- [x] Self Review

---------

Co-authored-by: autofix-ci[bot] <114827586+autofix-ci[bot]@users.noreply.github.com>
Co-authored-by: Jono Mingard <reason.koan@gmail.com>

--- a/.env.test
+++ b/.env.test
@@ -22,4 +22,7 @@ PLAYWRIGHT_BASE_URL="http://localhost:3020"
 # If not set, it defaults to "https://helperai.dev".
 NEXT_PUBLIC_DEV_HOST="http://localhost:3020"
 
-# Other environment variables and overrides can be added in .env.test.local. Refer to .env.test.local.sample for more details.
+# Set to 1 to run e2e on built app. 
+PLAYWRIGHT_USE_PREBUILT=0
+
+# Other environment variables and overrides can be added in .env.test.local. Refer to .env.local.sample for more details.
