--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -24,7 +24,7 @@ jobs:
           cache: "pnpm"
 
       - run: pnpm install --no-frozen-lockfile
-
+        
       - name: Build Packages
         run: pnpm run-on-packages build
         shell: bash
@@ -42,6 +42,6 @@ jobs:
         run: |
           export NODE_OPTIONS="--max_old_space_size=4096"
           cp .env.local.sample .env.local
-          pnpm run typecheck
+          pnpm run-on-packages typecheck && pnpm run with-dev-env tsc --noEmit && pnpm with-dev-env next build && pnpm run db:check
 
       - uses: autofix-ci/action@ff86a557419858bb967097bfc916833f5647fa8c
